# api/swagger.yaml
@@ -1,3 +1,4 @@
+---
 swagger: "2.0"
 info:
   description: "A API about the results of the feedbacks"
@@ -11,7 +12,7 @@ info:
   license:
     name: "MIT"
     url: "http://opensource.org/licenses/MIT"
-host: "tfg-ana.herokuapp.com"
+host: "localhost:8080"
 basePath: "/api"
 schemes:
 - "http"
@@ -21,165 +22,78 @@ consumes:
 produces:
 - "application/json"
 paths:
-  /feedbacks/results:
+  /feedbacksInformation:
     post:
-      tags:
-      - "Feedback results"
-      description: "Post a new feedback result for a student"
-      operationId: "newResult"
+      description: "Creates a new feedback.  Duplicates are allowed"
+      operationId: "addFeedback"
       produces:
       - "application/json"
-      - "application/xml"
       parameters:
       - in: "body"
-        name: "body"
-        description: "feedback result"
-        required: false
+        name: "feedback"
+        description: "Feedback to add"
+        required: true
         schema:
-          $ref: "#/definitions/resultFeedback"
+          $ref: "#/definitions/feedbackInformation"
       responses:
         200:
-          description: "successful operation"
+          description: "feedback response"
           schema:
-            $ref: "#/definitions/resultFeedback"
-        400:
-          description: "Invalid Order"
-      x-swagger-router-controller: "Results"
-  /feedbacks/results/{student}/{id_feedback}:
+            $ref: "#/definitions/feedbackInformation"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
+  /feedbacksInformation/{idFeedback}:
     get:
-      tags:
-      - "Feedback results"
-      description: "Returns the result of the feedback id_feedback for the student"
-      operationId: "findStudentFeedback"
+      description: "Returns the information of a feedback based on a single ID"
+      operationId: "findFeedbackById"
       produces:
       - "application/json"
       - "application/xml"
       - "text/xml"
       - "text/html"
       parameters:
-      - name: "student"
+      - name: "idFeedback"
         in: "path"
-        description: "Name of student to fetch"
+        description: "ID of feedback to fetch"
         required: true
-        type: "string"
-      - name: "id_feedback"
-        in: "path"
-        description: "Id of feedback to fetch"
-        required: true
-        type: "string"
+        type: "integer"
+        format: "int64"
       responses:
         200:
-          description: "successful operation"
+          description: "pet response"
           schema:
-            $ref: "#/definitions/resultFeedback"
-        400:
-          description: "Invalid id_feedback supplied"
-        404:
-          description: "Feedback or student not found"
+            $ref: "#/definitions/feedbackInformation"
         default:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Results"
-    post:
-      tags:
-      - "Feedback results"
-      description: "Post a new check result for a student and feedback"
-      operationId: "newCheck"
-      produces:
-      - "application/json"
-      - "application/xml"
-      parameters:
-      - name: "student"
-        in: "path"
-        description: "student to update"
-        required: true
-        type: "string"
-      - name: "id_feedback"
-        in: "path"
-        description: "feedback to update"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "body"
-        description: "check result"
-        required: false
-        schema:
-          $ref: "#/definitions/resultCheck"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/resultFeedback"
-        400:
-          description: "Invalid Order"
-      x-swagger-router-controller: "Results"
-    put:
-      tags:
-      - "Feedback results"
-      summary: "Updated feedback result for a student"
-      operationId: "updateResultStudent"
-      produces:
-      - "application/json"
-      - "application/xml"
-      parameters:
-      - name: "student"
-        in: "path"
-        description: "student to update"
-        required: true
-        type: "string"
-      - name: "id_feedback"
-        in: "path"
-        description: "feedback to update"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "body"
-        description: "Updated feedback object"
-        required: false
-        schema:
-          $ref: "#/definitions/resultFeedback"
-      responses:
-        400:
-          description: "Invalid feedback supplied"
-        404:
-          description: "Student not found"
-        default:
-          description: "unexpected error"
-          schema:
-            $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Results"
+      x-swagger-router-controller: "Default"
     delete:
-      tags:
-      - "Feedback results"
-      description: "deletes a feedback based on the id_feedback and student supplied"
-      operationId: "deleteFeedbackResult"
+      description: "deletes a single feedback based on the ID supplied"
+      operationId: "deleteFeedback"
       parameters:
-      - name: "student"
+      - name: "idFeedback"
         in: "path"
-        description: "Name of student to fetch"
+        description: "ID of feedback to delete"
         required: true
-        type: "string"
-      - name: "id_feedback"
-        in: "path"
-        description: "Id of feedback to fetch"
-        required: true
-        type: "string"
+        type: "integer"
+        format: "int64"
       responses:
         204:
-          description: "feeback result deleted for a student"
+          description: "feedback deleted"
         default:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Results"
-  /students:
+      x-swagger-router-controller: "Default"
+  /feedbacksResults:
     get:
-      tags:
-      - "Students"
-      description: "Returns all students from the system that the user has access\
-        \ to"
-      operationId: "findStudents"
+      description: "Returns all feedbacks results from the system that the user has\
+        \ access to"
+      operationId: "findFeedbacksResults"
       produces:
       - "application/json"
       - "application/xml"
@@ -194,296 +108,54 @@ paths:
         format: "int32"
       responses:
         200:
-          description: "students response"
+          description: "feedbacks results response"
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/student"
-        default:
-          description: "unexpected error"
-          schema:
-            $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Students"
-    post:
-      tags:
-      - "Students"
-      description: "Creates a new student in the store."
-      operationId: "addStudent"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "student"
-        description: "Student to add"
-        required: true
-        schema:
-          $ref: "#/definitions/student"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/student"
-        default:
-          description: "unexpected error"
-          schema:
-            $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Results"
-  /students/{name}:
-    get:
-      tags:
-      - "Students"
-      description: "Returns a students based on a name"
-      operationId: "findStudentByName"
-      produces:
-      - "application/json"
-      - "application/xml"
-      - "text/xml"
-      - "text/html"
-      parameters:
-      - name: "name"
-        in: "path"
-        description: "name of student to fetch"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "student response"
-          schema:
-            $ref: "#/definitions/student"
-        default:
-          description: "unexpected error"
-          schema:
-            $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Students"
-    put:
-      tags:
-      - "Students"
-      summary: "Updated student"
-      operationId: "updateStudent"
-      produces:
-      - "application/json"
-      - "application/xml"
-      parameters:
-      - name: "name"
-        in: "path"
-        description: "student to update"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "body"
-        description: "Updated student object"
-        required: true
-        schema:
-          $ref: "#/definitions/student"
-      responses:
-        400:
-          description: "Invalid student supplied"
-        404:
-          description: "Student not found"
-        default:
-          description: "unexpected error"
-          schema:
-            $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Students"
-    delete:
-      tags:
-      - "Students"
-      description: "deletes a single student based on the name supplied"
-      operationId: "deleteStudent"
-      parameters:
-      - name: "name"
-        in: "path"
-        description: "name of student to delete"
-        required: true
-        type: "string"
-      responses:
-        204:
-          description: "pet deleted"
-        default:
-          description: "unexpected error"
-          schema:
-            $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Students"
-  /feedbacks:
-    get:
-      tags:
-      - "Feedbacks information"
-      description: "Returns the information about all feedbacks"
-      operationId: "findFeedbacks"
-      produces:
-      - "application/json"
-      - "application/xml"
-      - "text/xml"
-      - "text/html"
-      parameters:
-      - name: "limit"
-        in: "query"
-        description: "maximum number of results to return"
-        required: false
-        type: "integer"
-        format: "int32"
-      responses:
-        200:
-          description: "feedbacks response"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/informationFeedback"
+              $ref: "#/definitions/feedbackResult"
         default:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
       x-swagger-router-controller: "Default"
     post:
-      tags:
-      - "Feedbacks information"
-      description: "Post a new feedback information"
-      operationId: "newFeedback"
+      description: "Creates a new feedback result for a student.  Duplicates are allowed"
+      operationId: "addFeedbackResult"
       produces:
       - "application/json"
-      - "application/xml"
       parameters:
       - in: "body"
-        name: "body"
-        description: "feedback information"
-        required: false
+        name: "feedbackResult"
+        description: "Feedback result to add"
+        required: true
         schema:
-          $ref: "#/definitions/informationFeedback"
+          $ref: "#/definitions/feedbackResult"
       responses:
         200:
-          description: "successful operation"
+          description: "feedback response"
           schema:
-            $ref: "#/definitions/informationFeedback"
-        400:
-          description: "Invalid Order"
-      x-swagger-router-controller: "Feedbacks"
-  /feedbacks/{id_feedback}:
-    get:
-      tags:
-      - "Feedbacks information"
-      description: "Returns the information of the feedback id_feedback"
-      operationId: "findFeedback"
-      produces:
-      - "application/json"
-      - "application/xml"
-      - "text/xml"
-      - "text/html"
-      parameters:
-      - name: "id_feedback"
-        in: "path"
-        description: "Id of feedback to fetch"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/informationFeedback"
-        400:
-          description: "Invalid id_feedback supplied"
-        404:
-          description: "Feedback not found"
+            $ref: "#/definitions/feedbackResult"
         default:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Feedbacks"
-    put:
-      tags:
-      - "Feedbacks information"
-      summary: "Updated feedback for a student"
-      operationId: "updateFeedbackInformation"
-      produces:
-      - "application/json"
-      - "application/xml"
-      parameters:
-      - name: "id_feedback"
-        in: "path"
-        description: "feedback to update"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "body"
-        description: "Updated feedback object"
-        required: false
-        schema:
-          $ref: "#/definitions/informationFeedback"
-      responses:
-        400:
-          description: "Invalid feedback supplied"
-        404:
-          description: "Feedback not found"
-        default:
-          description: "unexpected error"
-          schema:
-            $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Feedbacks"
-    delete:
-      tags:
-      - "Feedbacks information"
-      description: "deletes a feedback based on the id_feedback supplied"
-      operationId: "deleteFeedbackInformation"
-      parameters:
-      - name: "id_feedback"
-        in: "path"
-        description: "Id of feedback to fetch"
-        required: true
-        type: "string"
-      responses:
-        204:
-          description: "feeback information deleted"
-        default:
-          description: "unexpected error"
-          schema:
-            $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Feedbacks"
+      x-swagger-router-controller: "Default"
 definitions:
-  resultFeedback:
+  errorModel:
     type: "object"
+    required:
+    - "code"
+    - "message"
     properties:
-      subject:
-        type: "string"
-      edition:
-        type: "string"
-      id_feedback:
+      code:
         type: "integer"
         format: "int32"
-      student:
+      message:
         type: "string"
-      reviewer:
-        type: "string"
-      result:
-        type: "string"
-      score:
-        type: "integer"
-        format: "int32g"
-      resultChecks:
-        type: "array"
-        items:
-          $ref: "#/definitions/resultCheck"
-  resultCheck:
+  feedbackInformation:
     type: "object"
     properties:
-      subject:
-        type: "string"
-      edition:
-        type: "string"
-      id_feedback:
-        type: "integer"
-        format: "int32"
-      student:
-        type: "string"
-      id_check:
-        type: "integer"
-        format: "int32"
-      result:
-        type: "string"
-      comments:
-        type: "string"
-  informationFeedback:
-    type: "object"
-    properties:
-      id_feedback:
+      idFeedback:
         type: "integer"
         format: "int32"
       preparation:
@@ -494,25 +166,10 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/check"
-  student:
-    type: "object"
-    properties:
-      id_feedback:
-        type: "integer"
-        format: "int32"
-      name:
-        type: "string"
-      group:
-        type: "integer"
-        format: "int32"
-      section:
-        type: "string"  
-      shift:
-        type: "string"
   preparation:
     type: "object"
     properties:
-      id_preparation:
+      idPreparation:
         type: "integer"
         format: "int32"
       description:
@@ -527,14 +184,52 @@ definitions:
         type: "string"
       description:
         type: "string"
-  errorModel:
+  feedbackResult:
     type: "object"
-    required:
-    - "code"
-    - "message"
     properties:
-      code:
+      subject:
+        type: "string"
+      edition:
+        type: "string"
+      idFeedback:
         type: "integer"
         format: "int32"
-      message:
+      student:
+        type: "string"
+      reviewer:
+        type: "string"
+      group:
+        type: "integer"
+        format: "int32"
+      section:
+        type: "string"
+      shift:
+        type: "string"
+      result:
+        type: "string"
+      score:
+        type: "integer"
+        format: "int32g"
+      arrayCheckResults:
+        type: "array"
+        items:
+          $ref: "#/definitions/checkResult"
+  checkResult:
+    type: "object"
+    properties:
+      subject:
+        type: "string"
+      edition:
+        type: "string"
+      idFeedback:
+        type: "integer"
+        format: "int32"
+      student:
+        type: "string"
+      idCheck:
+        type: "integer"
+        format: "int32"
+      result:
+        type: "string"
+      comments:
         type: "string"
